# Anubis

./: .gitignore  Makefile  README.md  data_n_model_tester.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt
.dvc/: config
data/ProteinScraping/: api_fetch_script.py  api_fetch_script_pdb.py  api_fetch_script_with_streaming.py  scraped_proteins_dataset_80_seq.csv.dvc
data/ProteinScraping/PyMol/: .gitignore  PyMOL_Analysis.py  PyMol_results_max_80_seq.txt.dvc  pdb_files_for_pymol.dvc  pdb_files_for_pymol.zip.dvc
data/raw/: .gitignore  MonomericProteinsWithFeatures.xlsx.dvc  check_len.ipynb  graph_gen.ipynb  pdb_files.dvc
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
logs/: model_tester.ipynb
notebooks/: api_fetch.ipynb
notebooks/PyMol/: PyMOL_Analysis.py  Results_34.txt  pdb_ids.txt  pymol_sandbox.ipynb
result_analysis/: pre_analysis.ipynb  test_loss_recalculators.ipynb
scaling_model/: __init__.py  train_model.py
scaling_model/configs/: lightning_config.yaml
scaling_model/data/: data_module.py  random_data.py  utils.py
scaling_model/models/: painn.py  painn_lightning.py  utils.py
