[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scaling_model"
version = "0.0.1"
description = "Scaling properties of graph neural networks for molecular modeling"
authors = [
  { name = "Haack\u0026Vinjebo", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.10.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["scaling_model"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
